# ChangeLog for media-video/libav
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/libav/ChangeLog,v 1.172 2013/12/18 19:43:32 lu_zero Exp $

*libav-10_alpha1 (18 Dec 2013)

  18 Dec 2013; Luca Barbato <lu_zero@gentoo.org> +libav-10_alpha1.ebuild:
  Alpha release to test the tree for compatibility

*libav-0.8.9-r1 (03 Nov 2013)

  03 Nov 2013; Luca Barbato <lu_zero@gentoo.org> +libav-0.8.9-r1.ebuild:
  p.masked multilib-ready ebuild

*libav-0.8.9 (03 Nov 2013)

  03 Nov 2013; Luca Barbato <lu_zero@gentoo.org> +libav-0.8.9.ebuild:
  New security update

*libav-0.8.8 (02 Nov 2013)

  02 Nov 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libav-0.8.8.ebuild:
  Add libav 0.8.8 as it was forgotten to be bumped.

*libav-9.10 (16 Oct 2013)

  16 Oct 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libav-9.10.ebuild,
  -libav-9.8.ebuild, -libav-9.9.ebuild:
  Version bump to 9.10 release and drop sec-vulnerable releases.

*libav-9.9 (13 Sep 2013)

  13 Sep 2013; Luca Barbato <lu_zero@gentoo.org> +libav-9.9.ebuild:
  Version Bump

  11 Aug 2013; Alexis Ballier <aballier@gentoo.org> libav-9.8.ebuild,
  libav-9.9999.ebuild, libav-9999.ebuild:
  Only block ffmpeg:0, other slots are for binary compatibility and will have
  proper blockers.

*libav-9.8 (27 Jul 2013)

  27 Jul 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libav-9.8.ebuild,
  -libav-9.7.ebuild:
  Version bump to 9.8, punt out 9.7.

  10 Jul 2013; Luca Barbato <lu_zero@gentoo.org> libav-0.8.7.ebuild,
  libav-0.8.9999.ebuild, libav-9.7.ebuild, libav-9.9999.ebuild,
  libav-9999.ebuild:
  Add subslot support for x264, thanks to Nikoli for the patch

  23 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> libav-9.7.ebuild,
  libav-9.9999.ebuild, libav-9999.ebuild:
  Drop no longer workaround for march=native. Fixes bug#458768.

  23 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> libav-0.8.7.ebuild,
  libav-0.8.9999.ebuild: