@@ -1,5 +1,6 @@
 AUX libav-0.8.5-support-libcdio-paranoia.patch 1477 SHA256 2e3490bba021c512828f12dfc5e6be39a5f3c53e16b2ceb99e6f6c4e71139803 SHA512 2a9847a435a32fac0b9bd904b932d20f26a6c7b0d086cda42c45f9099d87dbd4e637c7a52e5c29ad0df69a95ffed91bad2673d773c3045f03baf736796ab8332 WHIRLPOOL 77152717b72d245e4bfd5ac0cc1ed4ac3a512086be248515bc7d0c73d4840cfae7ba3bb7a668ee354803b6fba6ad90b992f80f2c335b5173741498a968b3eca2
 DIST fate-0.8.2.tar.xz 443503168 SHA256 4c16212e4d99194e670227ccf93d54c9bb4b6f27c515626a536b87deb610d850 SHA512 eca7783af7afc567ed226942b1318b1874b2487c7dc65406fe2097cf2318d722bb4c45ed14363bc3653f948f7cdac5967162e1f4fbd5cbec1adc244886800bb1 WHIRLPOOL abe5faa67444c3edaf5ae9a57a701ba0fccd3e313941d0f7662b8dc2b3a8886578d7bcbd6ed4abfc62abe3b7a36ea216529710e28d1c9cff8f3bb2b9804707bf
+DIST fate-10.tar.xz 558524508 SHA256 65779319ff75a5d93f20132a7c348db2ff6f0f0275fb64a23f81fbda6e44c1cb SHA512 5e569b899961d82c579d974eb13b8a5263ae7a83dc788119d6abf923c9c133029fd861960a85c316e0b0a0bd61722cc3bcb393a65d9d2c551084c0b1103cc582 WHIRLPOOL d9e0bb01ae809ca57a566ae804b9e30ff0239e43047a7f93d07ab0d31e95c7f06cadd651dd3badc2b906f34ffa12669cff87910ffe115f34c3279615f8afaddb
 DIST fate-9.tar.xz 467671500 SHA256 27d10fd49267452ac787c3f43501a4a21d0ccaccc5ddd6d79d8a6150ee276532 SHA512 8e45539f2512ef915b37c857226c0243940259f269b8f99393b9defa3352d7b8c1fcc5078f4f0d40dc0509737f0c915e179cedcc77f71fe5d96b1b956169a202 WHIRLPOOL d280ac32c6d84f121be8d733774e72a4df3f2e84d71051aea509ef5ca3289c94fd548bf03ff12215e045bf20c83426c547e6b5eb446429d167f38af7c7aa9803
 DIST libav-0.8.7.tar.xz 3763180 SHA256 8be6cbee4066ea031110d0f1cf8f9fecda8bc36d868aafdc7e0d34b59e6d5f3d SHA512 34b23bc61b4755b7d9aa078b77571641a167da0fb356c549ee48fa61fcedd4e9dcd7965ac65487606ef18edb3512f08a565de901f1927f11a18c1864da4ec83a WHIRLPOOL 3896adac36dc789a74e3839061e466f6277d225ecc13e9f6f96953b353fe6e15cd76b0464704240eb97c4c0fec230b21d7e4aa684869e367bb489ddee938bada
 DIST libav-0.8.8.tar.xz 3762556 SHA256 e95cf618eb6239177a62c46f15e840c37e02e8308baf94912fc5910ff4aacbf2 SHA512 6164310abfef3d7d921374f038cec7933c929ba7a628dd087e9ba3be416ecdade973ee0ef304e580488ecf5594819a1168bc31ef0fc26baff6018adf10187ca5 WHIRLPOOL f713ee72dbf38f62f5515dd19fad3e5c7a50f096c047144c0492cd092cf521301707c006d4ce7aff442840cb5bf2ee66ddadfdb098b019851181d3b13c0e102a
@@ -11,9 +12,9 @@ EBUILD libav-0.8.8.ebuild 9178 SHA256 53730d20f61e9d7cd77a72126a65b6745f26855965
 EBUILD libav-0.8.9-r1.ebuild 10246 SHA256 67aae95f52915832f926415f5f0103a0878e5805a961ce0dc1b70a888d9d877c SHA512 cf2b2de59e6cf6b9a9c73a8950fe70bc9c034e1f79d50671b2ad0cb50788355efb9e348c80bb59518948838da28941a45a74589bcc3d92cad701874c52a25f06 WHIRLPOOL 256f3904881ab837c09c73134abef6a55b887aab7ebf334e6207756db8751b1e95f520e19acc2f20561b0bfd3ca3baeff2482257c425d07bd779a557eb61c0e9
 EBUILD libav-0.8.9.ebuild 9176 SHA256 6f685b0e8d2119e441942a6fcc1a04c4d7a18a0ae4ace60f69bf9947e8194399 SHA512 2c88f238b1c8fc46c769fc0b09c1902d41311355faaf67855e7fe6df163f8dbc14d3e858396763eca83665900e59852506d0c7ae2dff970c8c8d268ae67c50c2 WHIRLPOOL 93a7fc711c8b06c25d9bfc1b83e63d2dc11ee90fb8c4ac04a9298cc3f459371696c4d20fcb7a8b2d5f8e40af17a981e3d39bfe0aaf2b90faad71bbae7f21e3b5
 EBUILD libav-0.8.9999.ebuild 9177 SHA256 b1d7a8c2404d3d6470aaafdf1326690dd3434c9ce6f02ccd1d0d5bccea429f27 SHA512 1f121daf174be6f1d97eb6cebd80faf11018514be19232c491fa5bcb0bd108668bcb23c3e14e6a49474fcc406a8a36a942214377c4cd8f24c52a7c4f7bf68522 WHIRLPOOL e483bff65b252eb1b47869d478328eb611cbb4a8ec0a0086118bc0134b920d7ae9d8566eb63390e0588cdb8cac7f1405b4a61a2f822e5b5216f1068a1fc1d2bb
-EBUILD libav-10_alpha1.ebuild 8387 SHA256 041bbc3ec5a5ea1b3becc8140d1e58900c617e8ab2228119f8dd0b02876b5fd5 SHA512 d8ce259db3eac17bb5307943a94ea275893189e59b07b0e46c602f91d382d3ae360a4e38ae91c9a5dc70695c28dd946de24a8f8d11ec94d92a5c4851fa4755df WHIRLPOOL f9fbef6d46ebe5f0261f52041b7c5b35874c581ef5a053f5adcc11887d13cc479adb6b8368cfb661af9263c1d12d636a604c24cff415e363a4db74b1443537ea
+EBUILD libav-10_alpha1.ebuild 8380 SHA256 33e0a167c01237d9eff519f4c7bf31036c9e59644f4c8be0e2949a1b865b1e9a SHA512 547bd979a3f16ba6c30171b648dc4f720d9a72e8b393aef6a974176b0a723c6ff37a7cc2e3f0e2f2cc35784396d2ba782af3181280844cad7398439839254707 WHIRLPOOL aef50e05fc7d22ee66e25226f41e351ec5792304e358d3e58796245798c87eae6c27907b146e7ecac0486920bdda001aca51fbd00a0f945e04d7f96d1e704f13
 EBUILD libav-9.10.ebuild 8506 SHA256 bd357a6da5d94ddb14f04ef1c0010afaab257360b86a6568da41912196800a23 SHA512 851ab77b93229ba56aff529c5e2c17c9ecd6752ecc73bf0b206504997ab72e54580e363b2359b5c826b670fc07150e6af95c78fc4a0f324dbcba957da986aca4 WHIRLPOOL 04a0191df2adfe69401dad1a1bb77d866f93678ff12e24a9865d4fc60a16b9ab01dc8fba2cea122463f4f88ddeb017a7c2315fff938cc9f420a0855d93bc3cdb
 EBUILD libav-9.9999.ebuild 8507 SHA256 ff306a60436ff6b98217b10d1a8065e57997e7ea4c10423b1440a0414e3bc24b SHA512 f8cf2aed28891d4dc22fd58f0a869b94a7b85690ef150db4ee14e7d824c00458d3b7d48e51e2e5b6eb9894cef29336f20dead25d67c7066f8d1d00f8071a51d4 WHIRLPOOL 471c6fdaf9b5708819ba6383b014d78814d2f1baad10e9b4f0fbaaf68c2069e0ead8bdb10a0ead8f414025c934d8791c4a8affb11138dcfd301885dee47fcc20
 EBUILD libav-9999.ebuild 8384 SHA256 937f1291701e272b2cfb903e608a7d72bedecf4b1fb4bc9895de322f2e8a6150 SHA512 21f8ceed1b8a2f224f10e91b3bff04dad7633c7889c475f47f4da874763e647a496383d73afdeb0edde0f9ef048aa856345100596bbbd94c82cdfe74c27c13a9 WHIRLPOOL 7df52ad4ec21108e344f72e7aec65db6806d0b5bb5356ca3ef0251c6e5ae513b8b38645f1c1c90e2ebdfd333deccc9fd21133aa14ce7b79bf37a07ff7ae34478
-MISC ChangeLog 25699 SHA256 7223885d5d06aab5dbed00676e452d8b4c6383cbcfd8ccb9ab978f28329003b9 SHA512 a6e17a9c21f074fc28881db9569d7d5f56d76137dc05b5c39144809b45c7d48d88e636862ce8b7599988035dc257e81bcf790eea747fa7c17192b408860a2d39 WHIRLPOOL ea62c644782b039f953874e56e1aa3873877a3c9506a7e58d48eb3e6ce53064b00e76e91557288917209335c7c701a55d8c00258ff56bec514e3a99319da933b
+MISC ChangeLog 25785 SHA256 61b08096cf9861ce957519d71c5191a6821bd4c8588bb7e60b0744efdd2b57ea SHA512 f6aeb227026244f74609f8a59520af55a08deed96276a358344889fa943e5bb58169275c2d35dc31781ef42d5dad62452e0fb5e0052062fda0ec3c255b2f4a48 WHIRLPOOL c2ce9df3689a27e279c71bbc4bab88cdb9e814739e8b49f3de4e86c1ac2915b37a861aa8e2b831f26e86576df36c7f7dbfde84d46c17e864786a4786cf2c6262
 MISC metadata.xml 3106 SHA256 968ffe2f92f6e2ae9963fe0005e78fc205ebca769d48eedd578472cef8c8cfcc SHA512 f10f99a54e1806b17d0923429c2df151e470edceefd854e63c0411b2be6fbbaf829e441dd318ff0e87d5f2d6985c52673646c20c971fba9c0d44d67edc3bb5c8 WHIRLPOOL 9004c95991227752427cf62491949845931683a9a45a7a555b98b1bf92cf7d2efad0e2c912b4a069e58e31f41062d0025b8e3a082e0cc37c5d13484969058a47
